--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Your professional resume or portfolio site.">
+  <meta name="keywords" content="resume, portfolio, devingelesss, software developer, web developer">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Your Name">
+
   <title>Resume - Angeles Estremos</title>
   <style>
     body {
