--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Your professional resume or portfolio site.">
-  <meta name="keywords" content="resume, portfolio, devingelesss, software developer, web developer">
+  <meta name="description" content="The online resume and portfolio of Angeles Estremos, a Bachelor of Industrial Technology majoring in Computer Technology.">
+  <meta name="keywords" content="Angeles Estremos, resume, portfolio, computer technology, IT, web developer, GitHub Pages">
   <meta name="robots" content="index, follow">
-  <meta name="author" content="Your Name">
+  <meta name="author" content="Angeles Estremos">
 
   <title>Resume - Angeles Estremos</title>
   <style>
