--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="keywords" content="Angeles Estremos, resume, portfolio, computer technology, IT, web developer, GitHub Pages">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Angeles Estremos">
+  <meta name="google-site-verification" content="B0Tszm4JUBU-raaUoQ6nDktCOvfG8l9XraIOFKIlPQE" />
+  
 
   <title>Resume - Angeles Estremos</title>
   <style>
